[package]
name = "iqfeed-rs"
version = "0.1.0"
authors = ["Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = [ "net", "io-util" ] }
lexical = "5.2.1"
rkyv = "0.4.1"
memmem = "0.1.1"
async-channel = "1.6.1"
time = { git = "https://github.com/time-rs/time", branch = "main", features = ["parsing"] }

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full"] }
