[package]
name = "iqfeed-rs"
version = "0.1.0"
authors = ["Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = [ "net", "io-util" ] }
lexical = "5.2.1"
rkyv = "0.5.1"
memmem = "0.1.1"
async-channel = "1.6.1"
time = { git = "https://github.com/time-rs/time", branch = "main", features = ["parsing"] }
once_cell = "1.7.2"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full"] }
criterion = { version = "0.3.4", features = ["html_reports"] }
