[package]
name = "iqfeed-rs"
version = "0.1.0"
authors = ["Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = [ "net", "io-util" ] }
lexical = { version = "6.0.1", default-features = false, features = [ "parse-integers", "std" ] }
rkyv = "0.7.28"
memchr = "2.4.1"
async-channel = "1.6.1"
time = { version = "0.3.5", features = ["parsing", "macros"] }
fast-float = "0.2.0"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
criterion = { version = "0.3.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
